--- a/admin.ejs
+++ b/admin.ejs
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="popup">
-        <h2>Congratulations!</h2>
+        <h2>Congratulations, <%= username %>!</h2>
         <p>It was about time <span class="smiley">😄</span></p>
         <p>Your code word is <span class="code-word">SecretSquirrel</span></p>
     </div>
