--- a/admin.ejs
+++ b/admin.ejs
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('images/success.jpg');
+            background-image: url('images/success.jpg'); /* Background image URL */
             background-size: cover;
             background-position: center;
             text-align: center;
@@ -27,26 +27,26 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             position: relative;
-            top: 14em; /* Adjust the top value to move the popup down */
-            margin-left: 3em; /* Add 2em margin to the right */
+            top: 14em;
+            margin-left: 3em;
         }
 
         h2 {
-            font-size: 31px; /* Increased font size for 'Congratulations!' */
+            font-size: 31px;
         }
 
         p {
-            font-size: 24px; /* Font size for 'It was about time' */
+            font-size: 24px;
         }
 
         .code-word {
-            font-size: 28px; /* Font size for the code word */
+            font-size: 28px;
             font-weight: bold;
             color: #05ff26;
         }
 
         .smiley {
-            font-size: 36px; /* Font size for the smiley face */
+            font-size: 36px;
         }
     </style>
 </head>
